# code4uai

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
backend/: .env.example  README.md  pyproject.toml  run.py
backend/src/code4u/: __init__.py
backend/src/code4u/agents/: __init__.py  base.py  chaos_agent.py  github_reviewer.py  legal_agent.py  predictor_agent.py  red_team_agent.py  wisdom_agent.py
backend/src/code4u/agents/chat/: __init__.py  assembler.py  retriever.py
backend/src/code4u/agents/healing/: __init__.py  diagnoser.py  parser.py
backend/src/code4u/agents/meta/: __init__.py  forge.py
backend/src/code4u/agents/migration/: __init__.py  executor.py  import_sync.py  planner.py
backend/src/code4u/agents/nexus/: __init__.py  impact_analyzer.py  rules.py  sentinel.py
backend/src/code4u/agents/orchestrator/: __init__.py  chief.py  controller.py  models.py
backend/src/code4u/agents/performance/: __init__.py  optimizer.py  parser.py
backend/src/code4u/agents/quality_swarm/: __init__.py  accessibility_agent.py  compatibility_agent.py  localization_agent.py  (+1 more)
backend/src/code4u/ai_engine/: README.md  __init__.py  distillation.py  vector_store.py
backend/src/code4u/analytics/: hotspot_analyzer.py
backend/src/code4u/change_execution/: README.md  __init__.py
backend/src/code4u/cli/: __init__.py  health.py  history.py  main.py
backend/src/code4u/code_intelligence/: README.md  __init__.py
backend/src/code4u/core/: __init__.py  cache.py  collaboration.py  config.py  consensus.py  dist.py  executor_ext.py  guardrails.py  loader.py  logging.py  nexus.py  presence.py  recipes.py  staging.py  version.py  watcher.py
backend/src/code4u/interfaces/: README.md  __init__.py
backend/src/code4u/knowledge/: pattern_extractor.py  provenance_tracker.py
backend/src/code4u/models/: __init__.py  analytics.py
backend/src/code4u/platform_core/: README.md  __init__.py  telemetry.py
backend/src/code4u/requirements_intelligence/: README.md  __init__.py
backend/src/code4u/security_compliance/: README.md  __init__.py  sbom_generator.py  toxic_scanner.py
backend/src/code4u/validation/: __init__.py  gauntlet_orchestrator.py
backend/tests/: conftest.py  test_analytics_dashboard.py  test_autonomous_swarm.py  test_comprehensive_integration.py  test_comprehensive_unit.py  test_concurrency_and_tenancy.py  test_day19_21_integration.py  test_day19_21_unit.py  test_drift_sentinel.py  test_e2e_system.py  test_enterprise_scale.py  test_forge_plugins.py  test_github_pr_automation.py  test_graph_chat.py  test_ide_day2.py  test_migration_agent.py  test_multi_llm_switchboard.py  test_nexus_multirepo.py  test_performance_nonfunctional.py  test_performance_profiler.py  test_presence_collaboration.py  test_projects_day4.py  test_quality_jury.py  test_recipe_engine.py  test_regression_suite.py  test_rollback_integrity.py  test_security_audit.py  test_security_day1.py  test_self_healing.py  test_session_and_impact.py  test_smoke_sanity.py  test_streaming_and_events.py  test_swarm_day3.py  test_v1_launch.py  test_vision_architect.py  test_visual_grounder.py  test_war_room.py
cli/: README.md  pyproject.toml
cli/src/code4u_cli/: __init__.py  client.py  main.py
cli/src/code4u_cli/commands/: agent.py  analyze.py  chat.py  config.py  generate.py  refactor.py
(+396 files in other folders)
