[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "code4u-backend"
version = "1.0.0"
description = "code4u.ai Backend Services - AI-Native Engineering Platform"
authors = ["code4u.ai Team"]
packages = [{ include = "code4u", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
# Core web framework
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"

# HTTP clients
httpx = "^0.26.0"

# Logging
structlog = "^24.1.0"

# CLI
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"

# Concurrency
filelock = "^3.13.0"

# SSE streaming
sse-starlette = "^2.0.0"

# GitHub integration
PyGithub = "^2.1.0"

# File watching
watchdog = "^6.0.0"

# Authentication
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

# Utilities
PyYAML = "^6.0.1"
toml = "^0.10.2"
eval-type-backport = "^0.2.0"

# ---- Heavyweight deps below: uncomment when deploying full platform ----
# aiohttp = "^3.9.0"
# websockets = "^12.0"
# redis = "^5.0.1"
# asyncpg = "^0.29.0"
# sqlalchemy = { extras = ["asyncio"], version = "^2.0.25" }
# alembic = "^1.13.0"
# qdrant-client = "^1.7.0"
# chromadb = "^0.4.22"
# openai = "^1.10.0"
# anthropic = "^0.14.0"
# tiktoken = "^0.5.2"
# google-generativeai = "^0.3.2"
# prometheus-client = "^0.19.0"
# opentelemetry-api = "^1.22.0"
# opentelemetry-sdk = "^1.22.0"
# playwright = "^1.41.0"
# faster-whisper = { version = "^0.10.0", optional = true }
# pydub = "^0.25.1"
# slack-sdk = "^3.27.0"
# msal = "^1.26.0"
# PyJWT = "^2.8.0"
# cryptography = "^41.0.7"
# tree-sitter = "^0.20.4"
# tree-sitter-python = "^0.20.0"
# tree-sitter-javascript = "^0.20.0"
# tree-sitter-typescript = "^0.20.0"
# python-dateutil = "^2.8.2"
# [tool.poetry.extras]
# whisper = ["faster-whisper"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
ruff = "^0.1.14"
black = "^24.1.0"
pre-commit = "^3.6.0"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.poetry.scripts]
code4u = "code4u.cli.main:app"
